extending tests and bugfixes for schema syncing across branches (wip)